tests/fixtures/invalid/pow_none_dict_str.py
# Cannot call pow() with None, Dict[str, int], Str
x = pow(None, {"a": 1}, "hello")
